Update bower name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-filters",
+  "name": "polymer-efilters",
   "version": "0.3.0",
   "authors": [
     "Addy Osmani <addyosmani@gmail.com>",
